fixed overlapping image issue with about page overlay

--- a/stylesheets/_about.scss
+++ b/stylesheets/_about.scss
@@ -19,6 +19,7 @@
 
 .overlay{
 	position: absolute;
+	margin-top: -5rem;
 	width: 180%;
 	z-index: 10;
 }
