--- a/stylesheets/style.css
+++ b/stylesheets/style.css
@@ -332,6 +332,7 @@ div.angle {
 
 .overlay {
   position: absolute;
+  margin-top: -5rem;
   width: 180%;
   z-index: 10; }
 
